--- a/app.service/package.json
+++ b/app.service/package.json
@@ -9,18 +9,21 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
     "formidable": "^3.5.2",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "node-fetch": "^2.7.0",
+    "puppeteer": "^24.2.1",
     "sequelize": "^5.22.5",
     "serverless-http": "^3.0.0",
     "tedious": "^18.6.1",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
     "@types/formidable": "^3.4.5",
     "@types/mssql": "^9.1.5",
     "nodemon": "^2.0.22"
