--- a/app.service/package.json
+++ b/app.service/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.10",
     "express": "^4.18.2",
     "formidable": "^3.5.2",
+    "html-pdf": "^3.0.1",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
