--- a/app/package.json
+++ b/app/package.json
@@ -23,18 +23,20 @@
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "path-browserify": "^1.0.1",
-    "pdfjs-dist": "3.4.120",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.3.1",
     "react-apexcharts": "^1.5.0",
     "react-cron-generator": "^2.0.13",
     "react-cron-schedule": "^2.2.6",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
+    "react-fast-scroll-pdf": "^1.3.1",
     "react-file-reader": "^1.1.4",
     "react-grid-system": "^8.2.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-intl": "^7.0.1",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^6.28.0",
     "rsuite": "^5.74.2",
     "sweetalert2": "^11.14.5",
@@ -42,6 +44,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
