--- a/app.mobile/package.json
+++ b/app.mobile/package.json
@@ -17,7 +17,8 @@
     "react-native-screens": "^4.9.0",
     "react-native-web": "^0.16.1",
     "react-navigation": "^5.0.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-spring": "^9.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
