--- a/app.mobile/package.json
+++ b/app.mobile/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "react": "^18.3.1",
     "react-art": "17.0.2",
     "react-dom": "^18.3.1",
