--- a/app.mobile/package.json
+++ b/app.mobile/package.json
@@ -24,6 +24,7 @@
     "react-navigation": "^5.0.0",
     "react-scripts": "^5.0.1",
     "react-spring": "^9.7.5",
+    "styled-components": "^6.1.16",
     "yarn": "^1.22.22"
   },
   "scripts": {
