--- a/app.mobile/package.json
+++ b/app.mobile/package.json
@@ -9,6 +9,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-art": "17.0.2",
     "react-datepicker": "^8.2.1",
